2023-08-19T00:55:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5908472102 # 1793
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-19
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 279 447 / 280 448
* notice: next accum: outdated-unq outdated-all / unq all: 279 447 / 281 449
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-08-18]

2023-08-18T08:16:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5900396278 # 1791
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-18
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 278 446 / 279 447
* notice: next accum: outdated-unq outdated-all / unq all: 279 447 / 280 448
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-07-30] / [2023-08-18]

2023-08-11T08:16:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5830415393 # 1770
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-11
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 277 444 / 279 447
* notice: next accum: outdated-unq outdated-all / unq all: 278 446 / 279 447
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-28] / []

2023-07-31T16:18:44Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5717085564 # 1738