@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-19T00:55:57Z",
+  "timestamp" : "2023-08-24T08:16:14Z",
   "count_outdated" : 447,
   "uniques_outdated" : 279,
-  "count" : 449,
-  "uniques" : 281,
+  "count" : 450,
+  "uniques" : 282,
   "clones" : [
     {
       "timestamp": "2023-08-18T00:00:00Z",
@@ -13,6 +13,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-08-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
